ReSharper.FSharp/test/data/parsing/errors/Signature - Id 03.fsi
module M

val a: int
b
val c: int
